--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <div class="heading" >
 
    <h1> Shraddha Shetty</h1></div>
-   <div class="imge"><img src="2.jpeg"></div>
+   <div class="imge"><img src="1.png"></div>
     
     <br><div class="details">
    
